# TOGG

./: LICENSE  README.md
GA/: README.md
QGS-SSG/BKDT/: README.md
QGS-SSG/BKDT/include/: index_ssg.h
QGS-SSG/BKDT/src/: index_ssg.cpp
QGS-SSG/BKDT/tests/: test_ssg_index.cpp  test_ssg_optimized_search.cpp
QGS-SSG/BKMT/: README.md
QGS-SSG/BKMT/include/: index_ssg.h
QGS-SSG/BKMT/src/: index_ssg.cpp
QGS-SSG/BKMT/tests/: test_ssg_index.cpp  test_ssg_optimized_search.cpp
algorithms/GA/efanna_graph/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
algorithms/GA/efanna_graph/src/: Makefile  cmake_install.cmake  index_graph.cpp  index_random.cpp
algorithms/GA/efanna_graph/tests/: CMakeLists.txt  Makefile  cmake_install.cmake  test_kdtree_graph.cpp  test_nndescent.cpp
algorithms/GA/hnsw/: README.md  test.n2
algorithms/GA/hnsw/n2.egg-info/: PKG-INFO  SOURCES.txt
algorithms/GA/hnsw/src/: hnsw.cc
algorithms/GA/nsg/src/: index_nsg.cpp
algorithms/GA/nsg/tests/: evaluation.cpp
algorithms/GA/nssg/: README.md
algorithms/GA/nssg/include/: exp_data.h  index_ssg.h
algorithms/GA/nssg/src/: index_ssg.cpp
algorithms/TOGG-KDT/hnsw/: Makefile
algorithms/TOGG-KDT/nsg/: README.md
algorithms/TOGG-KMC/nsg/tests/: CMakeLists.txt  evaluation.cpp  nsg_toggkmc_test.cpp  test_nsg_optimized_search.cpp
routing_evaluation/include/weavess/: component.h  exp_data.h  index.h  policy.h
routing_evaluation/src/: builder.cpp  component_refine.cpp  component_route.cpp  component_search_entry.cpp
routing_evaluation/test/: CMakeLists.txt  evaluation.cpp
(+62 files in other folders)
